feat: 添加持久字幕管理
